<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/primary"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView android:src="@drawable/logo4"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal" />
        <!-- Nickname Label
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textCursorDrawable="@null">
            <EditText android:id="@+id/input_nick_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/prompt_nick_name"
                android:maxLines="1"
                android:backgroundTint="@color/white"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textColorLink="@color/white"
                android:textCursorDrawable="@null" />
        </android.support.design.widget.TextInputLayout>
        -->
        <!-- Name Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textCursorDrawable="@null">
            <EditText android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/prompt_nick_name"
                android:maxLines="1"
                android:backgroundTint="@color/white"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textColorLink="@color/white"
                android:textCursorDrawable="@null" />
        </android.support.design.widget.TextInputLayout>

        <!--  Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textCursorDrawable="@null">
            <EditText android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/prompt_email"
                android:maxLines="1"
                android:backgroundTint="@color/white"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textColorLink="@color/white"
                android:textCursorDrawable="@null" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textCursorDrawable="@null">
            <EditText android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/prompt_password"
                android:maxLines="1"
                android:backgroundTint="@color/white"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textColorLink="@color/white"
                android:textCursorDrawable="@null"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Password Re-enter Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textCursorDrawable="@null">
            <EditText android:id="@+id/input_reEnterPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/prompt_re_enter_password"
                android:maxLines="1"
                android:backgroundTint="@color/white"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textColorLink="@color/white"
                android:textCursorDrawable="@null"/>
        </android.support.design.widget.TextInputLayout>

        <!-- mobile number
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textCursorDrawable="@null">
            <EditText android:id="@+id/input_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/prompt_mobile"
                android:maxLines="1"
                android:backgroundTint="@color/white"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textColorLink="@color/white"
                android:textCursorDrawable="@null" />
        </android.support.design.widget.TextInputLayout> -->

        <!-- Signup Button -->
        <Button
            android:id="@+id/btn_next"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:background="@color/primary_darker"
            android:padding="12dp"
            android:text="@string/btn_next"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/link_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/link_login"
            android:textColor="@color/white"
            android:textSize="16dip" />
    </LinearLayout>
</ScrollView>